# single-word-comparisons-demo

./: LICENSE  README.md  compute_differences.py  distances.txt  pyproject.toml
wav2vec2-large-xlsr-53-ft-cgn/: config.json
